--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -71,7 +71,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #c87676;
+    background-color: #ffffff;
   }
   a:hover {
     color: #747bff;
@@ -79,4 +79,10 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+svelte-scroller-foreground {
+  pointer-events: none !important;
+}
+svelte-scroller-background {
+  pointer-events: all !important;
 }
